--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,9 @@
 buildscript {
     repositories {
-//        mavenCentral()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'me.tatarka:gradle-retrolambda:3.6.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
     }
 
     // Exclude the lombok version that the android plugin depends on.
@@ -13,67 +11,68 @@ buildscript {
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
-apply plugin: 'com.f2prateek.javafmt'
 apply plugin: 'kotlin-android'
 
 dependencies {
-    compile 'com.android.support:multidex:1.0.1'
-    compile "com.android.support:support-v13:${supportLibVersion}"
-    compile "com.android.support:appcompat-v7:${supportLibVersion}"
-    compile "com.android.support:recyclerview-v7:${supportLibVersion}"
+    implementation 'com.android.support:multidex:1.0.3'
 
-    compile 'com.github.kaushikgopal:CoreTextUtils:c703fa12b6'
-    compile "com.jakewharton:butterknife:${butterKnifeVersion}"
-    kapt "com.jakewharton:butterknife-compiler:${butterKnifeVersion}"
-    compile 'com.jakewharton.timber:timber:4.5.1'
-    compile "com.squareup.retrofit2:retrofit:${retrofitVersion}"
-    compile "com.squareup.retrofit2:converter-gson:${retrofitVersion}"
-    compile "com.squareup.okhttp3:okhttp:${okhttpVersion}"
-    compile "com.squareup.okhttp3:okhttp-urlconnection:${okhttpVersion}"
-    compile 'com.mcxiaoke.volley:library:1.0.19'
+    implementation 'com.github.kaushikgopal:CoreTextUtils:c703fa12b6'
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
-    compile "com.nhaarman:mockito-kotlin:${mockitoKotlinVersion}"
+    implementation "androidx.appcompat:appcompat:1.6.1"
+    implementation "androidx.recyclerview:recyclerview:1.3.1"
 
-    compile "android.arch.lifecycle:runtime:${archComponentsVersion}"
-    compile "android.arch.lifecycle:extensions:${archComponentsVersion}"
-    kapt  "android.arch.lifecycle:compiler:${archComponentsVersion}"
+    implementation "com.squareup.okhttp3:okhttp-urlconnection:3.0.1"
+    implementation 'com.mcxiaoke.volley:library:1.0.19'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.0"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.8.0"
+    implementation "com.nhaarman:mockito-kotlin:1.4.0"
+
+    implementation "android.arch.lifecycle:runtime:1.1.1"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    //kapt  "android.arch.lifecycle:compiler:1.1.1"
+
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     // ----------------------------------
     //  Rx dependencies
 
-    compile 'io.reactivex.rxjava2:rxjava:2.0.7'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
 
     // Because RxAndroid releases are few and far between, it is recommended you also
     // explicitly depend on RxJava's latest version for bug fixes and new features.
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
-    compile 'com.jakewharton.rx:replaying-share-kotlin:2.0.0'
-    compile "com.github.akarnokd:rxjava2-extensions:0.16.0"
-    compile 'com.jakewharton.rxrelay2:rxrelay:2.0.0'
+    implementation 'com.jakewharton.rx:replaying-share-kotlin:2.0.0'
+    implementation "com.github.akarnokd:rxjava2-extensions:0.16.0"
+    implementation 'com.jakewharton.rxrelay2:rxrelay:2.0.0'
 
-    compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
-    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
 
     // ----------------------------------
 
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+   // debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0'
+  //  releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
 }
 
 android {
-    compileSdkVersion sdkVersion
-    buildToolsVersion buildToolsVrs
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "com.morihacky.android.rxjava"
-        minSdkVersion 15
-        targetSdkVersion sdkVersion
+        minSdkVersion 25
+        targetSdkVersion 33
         versionCode 2
         versionName "1.2"
         multiDexEnabled true
     }
+    viewBinding {
+        enabled = true
+    }
+
     buildTypes {
         release {
             minifyEnabled true
