--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
-        jcenter()
         mavenCentral()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath 'com.f2prateek.javafmt:javafmt:0.1.2'
-
+        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,24 +14,16 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        mavenCentral()
         maven { url 'https://maven.google.com' }
         maven {
             url "https://jitpack.io"
         }
+        google()
     }
 
     ext {
-        sdkVersion = 24
-        buildToolsVrs = "25.0.0"
-
-        kotlinVersion = "1.1.3-2"
-
-        archComponentsVersion = "1.0.0-alpha3"
-        butterKnifeVersion = '8.5.1'
         mockitoKotlinVersion = "1.4.0"
-        okhttpVersion = "3.0.1"
         retrofitVersion = "2.0.0"
-        supportLibVersion = "25.3.1"
     }
 }
