--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,23 +14,22 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 dependencies {
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'androidx.multidex:multidex:2.0.1' // Use androidx.multidex
 
     implementation 'com.github.kaushikgopal:CoreTextUtils:c703fa12b6'
 
     implementation "androidx.appcompat:appcompat:1.6.1"
-    implementation "androidx.recyclerview:recyclerview:1.3.1"
+    implementation "androidx.recyclerview:recyclerview:1.3.1" // Use androidx.recyclerview
 
     implementation "com.squareup.okhttp3:okhttp-urlconnection:3.0.1"
-    implementation 'com.mcxiaoke.volley:library:1.0.19'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.0"
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.8.0"
-    implementation "com.nhaarman:mockito-kotlin:1.4.0"
+    implementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0" // Update to mockito-kotlin2
 
-    implementation "android.arch.lifecycle:runtime:1.1.1"
-    implementation "android.arch.lifecycle:extensions:1.1.1"
-    //kapt  "android.arch.lifecycle:compiler:1.1.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1" // Use androidx.lifecycle
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1" // Use androidx.lifecycle
+    implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:2.6.1" // Use androidx.lifecycle
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
     implementation 'com.google.code.gson:gson:2.10.1'
@@ -39,23 +38,24 @@ dependencies {
     // ----------------------------------
     //  Rx dependencies
 
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.1' // Use RxJava 3
 
     // Because RxAndroid releases are few and far between, it is recommended you also
     // explicitly depend on RxJava's latest version for bug fixes and new features.
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0' // Use RxAndroid 3
 
-    implementation 'com.jakewharton.rx:replaying-share-kotlin:2.0.0'
-    implementation "com.github.akarnokd:rxjava2-extensions:0.16.0"
-    implementation 'com.jakewharton.rxrelay2:rxrelay:2.0.0'
+    implementation 'com.jakewharton.rx3:replaying-share:3.0.0' // Use RxJava 3 version
+   // implementation 'com.github.akarnokd:rxjava2-extensions:0.16.0' // Not yet migrated to RxJava 3
+    implementation 'com.jakewharton.rxrelay3:rxrelay:3.0.0' // Use RxJava 3 version
 
-    implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
-    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    implementation 'com.jakewharton.rxbinding4:rxbinding:4.0.0' // Use RxBinding 4
 
-    // ----------------------------------
+    implementation 'com.google.firebase:firebase-components:17.0.0'
+    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
+    implementation 'com.jakewharton.rxbinding4:rxbinding:4.0.0'
 
-   // debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0'
-  //  releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+    // debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0'
+    // releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
 }
 
 android {
@@ -76,7 +76,7 @@ android {
     buildTypes {
         release {
             minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     sourceSets {
@@ -87,6 +87,6 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     packagingOptions {
-        pickFirst  'META-INF/rxjava.properties'
+        pickFirst 'META-INF/rxjava.properties'
     }
 }
